objects/APXTConga4__Conga_Composer_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings used by Conga Composer. These extend the organization object.</description>
    <fields>
        <fullName>APXTConga4__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Disable_C7_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable C7 Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Production_Org_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Org ID of the company&apos;s production instance of Salesforce.  This is used when Sandbox editions are created from the production. Conga applies organizational settings to sandbox accounts.</inlineHelpText>
        <label>Production Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Server_Override__c</fullName>
        <description>Overrides the ServerURL parameter in Composer and Mail Merge interactions with Salesforce.
https://na14.salesforce.com/services/Soap/u/8.0/00Dd0000000dy26
The override value would replace na14.salesforce.com</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Overrides the ServerURL parameter in Composer and Mail Merge interactions with Salesforce.
https://na14.salesforce.com/services/Soap/u/8.0/00Dd0000000dy26
The override value would replace na14.salesforce.com</inlineHelpText>
        <label>Server Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conga Composer Settings</label>
</CustomObject>